--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
+    "sanitize-html": "^1.26.0",
     "styled-components": "^5.1.0"
   },
   "scripts": {
